@@ -39,6 +39,7 @@ our %rawcmds = (
     'MOTD'     => { handler => \&raw_motd, },
     'ADMIN'    => { handler => \&raw_admin, },
     'FMODE'    => { handler => \&raw_fmode, },
+    'METADATA'    => { handler => \&raw_metadata, },
 );
 
 %Chakora::PROTO_SETTINGS = (
@@ -921,6 +922,7 @@ sub raw_server {
     for ( $i = 7 ; $i < count(@rex) ; $i++ ) { $args .= ' ' . $rex[$i]; }
     $Chakora::sid{ $rex[5] }{'info'} = $args;
     event_sid( $rex[2], $args );
+    if (!$Chakora::synced) { $Chakora::LINKD = $rex[5]; }
 }
 
 # Handle SERVER while linking
@@ -1208,6 +1210,256 @@ sub raw_admin {
                 send_sock(":".svsUID('chakora::server')." PUSH ".$user." ::".config('me', 'name')." 258 ".uidInfo($user, 1)." :".$Chakora::SERVICES_VERSION." for ".config('network', 'name'));
                 send_sock(":".svsUID('chakora::server')." PUSH ".$user." ::".config('me', 'name')." 259 ".uidInfo($user, 1)." :".config('services', 'email'));
         }
+}
+
+#[IRC] :623 METADATA * modules :-m_silence.so
+#[IRC] :623 METADATA * modules :+m_silence.so
+
+# Handle METADATA
+sub raw_metadata {
+	my ($raw) = @_;
+	my @rex = split(' ', $raw);
+	my $server = substr($rex[0], 1);
+	if ($rex[2] eq '*' and $rex[3] eq 'modules') {
+		my $opera = substr($rex[4], 1, 1);
+		my $mod = substr($rex[4], 2);
+		
+		if ($mod eq 'm_servprotect.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{god};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{god} = 'k';
+			}
+		}
+		elsif ($mod eq 'm_allowinvite.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'A'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'A'} = 1;
+			}
+		}
+		elsif ($mod eq 'm_blockcaps.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'B'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'B'} = 1;
+			}
+		}
+		elsif ($mod eq 'm_blockcolor.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'c'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'c'} = 1;
+			}
+		}
+		elsif ($mod eq 'm_noctcp.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'C'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'C'} = 1;
+			}
+		}
+		elsif ($mod eq 'm_delayjoin.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'D'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'D'} = 1;
+			}
+		}
+		elsif ($mod eq 'm_banexception.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{bexcept};
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'e'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{bexcept} = 'e';
+				$Chakora::PROTO_SETTINGS{cmodes}{'e'} = 2;
+			}
+		}
+		elsif ($mod eq 'm_messageflood.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'f'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'f'} = 2;
+			}
+		}
+		elsif ($mod eq 'm_nickflood.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'F'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'F'} = 2;
+			}
+		}
+		elsif ($mod eq 'm_chanfilter.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'g'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'g'} = 2;
+			}
+		}
+		elsif ($mod eq 'm_censor.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'G'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'G'} = 1;
+			}
+		}
+		elsif ($mod eq 'm_inviteexception.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{iexcept};
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'I'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{iexcept} = 'I';
+				$Chakora::PROTO_SETTINGS{cmodes}{'I'} = 2;
+			}
+		}
+		elsif ($mod eq 'm_joinflood.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'j'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'j'} = 2;
+			}
+		}
+		elsif ($mod eq 'm_kicknorejoin.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'J'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'J'} = 2;
+			}
+		}
+		elsif ($mod eq 'm_knock.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'K'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'K'} = 1;
+			}
+		}
+		elsif ($mod eq 'm_redirect.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'L'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'L'} = 2;
+			}
+		}
+		elsif ($mod eq 'm_services_account.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'M'};
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'R'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'M'} = 1;
+				$Chakora::PROTO_SETTINGS{cmodes}{'R'} = 1;
+			}
+		}
+		elsif ($mod eq 'm_nonicks.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'N'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'N'} = 1;
+			}
+		}
+		elsif ($mod eq 'm_operchans.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'O'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'O'} = 1;
+			}
+		}
+		elsif ($mod eq 'm_permchannels.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'P'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'P'} = 1;
+			}
+		}
+		elsif ($mod eq 'm_nokicks.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'Q'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'Q'} = 1;
+			}
+		}
+		elsif ($mod eq 'm_stripcolor.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'S'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'S'} = 1;
+			}
+		}
+		elsif ($mod eq 'm_nonotice.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'T'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'T'} = 1;
+			}
+		}
+		elsif ($mod eq 'm_auditorium.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'u'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'u'} = 1;
+			}
+		}
+		elsif ($mod eq 'm_sslmodes.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{cmodes}{'z'};
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{cmodes}{'z'} = 1;
+			}
+		}
+		elsif ($mod eq 'm_chanprotect.so') {
+			if ($opera eq '-') {
+				delete $Chakora::PROTO_SETTINGS{owner};
+				delete $Chakora::PROTO_SETTINGS{admin};
+				flaglist_del("Q");
+				flaglist_del("A");
+				if (module_exists("chanserv/owner")) {
+					logchan('operserv', "\002!!!\002 Unloading module \002chanserv/owner\002 as \002m_chanprotect.so\002 no longer exists!");
+					module_void("chanserv/owner");
+				}
+				if (module_exists("chanserv/protect")) {
+					logchan('operserv', "\002!!!\002 Unloading module \002chanserv/protect\002 as \002m_chanprotect.so\002 no longer exists!");
+					module_void("chanserv/protect");
+				}	
+			}
+			elsif ($opera eq '+') {
+				$Chakora::PROTO_SETTINGS{owner} = 'q';
+				$Chakora::PROTO_SETTINGS{admin} = 'a';
+				flaglist_add("Q", "Auto owner.");
+				flaglist_add("A", "Auto protect.");
+			}
+		}
+		
+		if ($opera eq '-') {
+			$Chakora::PROTO_SETTINGS{modules} =~ s/($mod)//g;
+		}
+		elsif ($opera eq '+') {
+			$Chakora::PROTO_SETTINGS{modules} .= ','.$mod;
+		}
+	}
 }
 
 1;
